tests/semantic/invalid/sibling_scope.mc
{
    int first = 1;
}
{
    print first;
}
